--- a/index.html
+++ b/index.html
@@ -21,78 +21,87 @@
           <a class="nav-item nav-link" href="#mission" onclick="$('#navbar').collapse('hide')">Mission</a>
           <a class="nav-item nav-link" href="#whoWeAre" onclick="$('#navbar').collapse('hide')">Who We Are</a>
           <a class="nav-item nav-link" href="#frames" onclick="$('#navbar').collapse('hide')">Our Frames</a>
+          <ul class="menu-list">
+            <li><a class="nav-item nav-link" href="#zenBarcelona" onclick="$('#navbar').collapse('hide')">Zen Barcelona</a></li>
+            <li><a class="nav-item nav-link" href="#ovvoOptics" onclick="$('#navbar').collapse('hide')">OVVO Optics</a></li>
+            <li><a class="nav-item nav-link" href="#carolineAbramParis" onclick="$('#navbar').collapse('hide')">Caroline Abram Paris</a></li>
+          </ul>
           <!-- a class="nav-item nav-link" href="#testimonials" onclick="$('#navbar').collapse('hide')">Testimonials</a -->
           <a class="nav-item nav-link" href="#faqs" onclick="$('#navbar').collapse('hide')">FAQs</a>
         </div>
       </div>
     </div>
   </nav>
-  <div class="container rounded mt-5 mb-3 p-2 text-light bg-dark-clear text-center lead" id="top">
+  <div class="container rounded mt-5 mb-3 p-2 text-light bg-dark-clear text-justify lead" id="top">
     <div class="container-fluid rounded border border-white">
-      <h1 class="display-title title-text text-nowrap">framed by tone</h1>
-      <h1 class="display-subtitle title-text mt-3 text-nowrap"><em>your redefined eyewear concierge</em></h1>
+      <h1 class="display-title title-text text-nowrap text-center">framed by tone</h1>
+      <h1 class="display-subtitle title-text mt-3 text-nowrap text-center"><em>your redefined eyewear concierge</em></h1>
       <div class="row my-5 justify-content-center">
         <div class="col-4 col-sm-3 col-lg-2">
           <img src="fleur-de-lis-white.png" class="img-fluid mx-auto d-block">
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 text-center">
           Monday - Saturday by Appointment Only
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 text-center">
           <a href="tel:206-637-9961" class="text-light">206.637.9961</a>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 text-center">
           <a href="mailto:tone@framedByTone.com" class="text-light">tone@framedByTone.com</a>
         </div>
       </div>
     </div>
     <div class="mt-4" id="mission">
-      <h1 class="title-text">Mission</h1>
+      <h1 class="title-text text-center">Mission</h1>
       <p>
         In redefining your eyewear selection expierence, it is everything to us in how you see the world and how you feel wearing a style that best expresses your individuality.
         With our independent and diverse collection we style and fit you professionally. Our collections are hand picked with quality, design and fashion in mind for our clients.
         Branding and advertising for manufacturers is not our course.
-        <br/>
+      </p>
+      <p>
         Our lens design portfolio and relationship with our lab are truly something we are proud of. There is nothing that can not be done within reason.
         From unique fashion tints, mirror coating, anti-reflective coating with mininum to no color hue to remarkably thin lens options in high power ranges.
         We take pride in our craft to be able to create a lens unique to your style and needs.
       </p>
     </div>
     <div class="mt-4" id="whoWeAre">
-      <h1 class="title-text">Who We Are</h1>
+      <h1 class="title-text text-center">Who We Are</h1>
       <p>
         With a keen eye for eyewear fashion and over 24 years of optical expierience, I am excited to have founded Framed by tone, LLC - “your redefined eyewear concierge”.
         Coupled with my approach to designing and curating exclusive collections, I take joy and pride when clients feel drawn with confidence that they will receive world class service and I excel in meeting their needs.
         Finding that perfect piece of ART to compliment their unique personality, keeping them fashionably ahead of the curve, and see them glow with confidence and pride.
         This is my passion and my craft. In my free time I enjoy biking and hiking with my better half when at all possible.
-        We always look forward to enjoying our city and its hidden wonders. We always look forward to visiting vineyards when all possible.
+        We always look forward to enjoying our city with its hidden wonders and visiting vineyards when at all possible.
       </p>
     </div>
     <div class="mt-4" id="frames">
-      <h1 class="title-text">Our Frames and Their Stories</h1>
+      <h1 class="title-text text-center">Our Frames and Their Stories</h1>
       <p>
         With most eyeglasses being made and distributed by just a few giant companies, their monopoly is rapidly eliminating the general public's choices.
         Framed by Tone is taking a stand. As you select the perfect pair from us know that you are supporting small independent shops.
-        <br>
+      </p>
+      <p>
         Stocking over 300 hand selected frames in Phase I of our shop, we have been supported with open arms by vendors from around the world.
         We are able to curate a selection of frame pieces that cater to every fit, taste, and prescription need.
-        <br>
+      </p>
+      <p>
         Every pair of glasses is thoughtfully fabricated with an experienced optician. With prior adjustments to the frame and numerous measurements to ensure accuracy,
         we interpret both functional and aesthetic variables to produce the finest quality eyewear for you.
       </p>
-      <h5 class="mt-3"><strong>ZEN BARCELONA</strong></h5>
+      <h5 class="mt-3" id="zenBarcelona"><strong>ZEN BARCELONA</strong></h5>
       <em>“frames that define you”</em>
       <p>
         The brand was born in 2005 in Barcelona and the city is in its DNA. Full of contrasts in perfect balance, home to historic buildings and avant-garde architecture,
         Barcelona has inspired every one of our shapes and innovative colours.
-        <br>
+      </p>
+      <p>
         With all Zen designs designed and created entirely in Barcelona by our team of designers,
         its process takes typically about six months and results in a one-of-a-kind frame that reflects our way of understanding eyewear and what our clients want:
         special and unique designs true to who they are as unique individuals.
       </p>
-      <h5 class="mt-3"><strong>OVVO Optics</strong></h5>
+      <h5 class="mt-3" id="ovvoOptics"><strong>OVVO Optics</strong></h5>
       <p>
         OVVO has been present in the U.S. since March 2011. Its history, however, goes back to Europe of the Cold War era. That’s when a group of scientists,
         who were working on developing a material for spacecraft and military use, fused surgical steel and titanium, achieving an exceptionally light,
@@ -100,37 +109,41 @@
         in 1980 the engineers of the company started using this unique composite to make frames for glasses.
         They are handmade, but manufactured with outstanding precision, mastered by over 30 years of experience. Entirely produced in Germany and Poland,
         OVVO frames bring exquisite European style and unmatched quality.
-        <br>
+      </p>
+      <p>
         Weighing barely 0.6 ounces OVVO frames offer unparalleled comfort and unfailing durability.
         Tests showed that stretched flat frames can hold up to 90 pounds without breaking or wrecking.
         Virtually indestructible and highly flexible is also OVVO Optics-patented screw-free hinge that can withstand more than 300,000 rotations
         (an equivalent of 205 years of usage) and reveal no changes in structure or appearance.
-        <br>
+      </p>
+      <p>
         OVVO Optics’ eyewear is 100% manufactured in family-owned plants in Europe, where each frame goes through 65-85 steps before it is complete.
         First, using German engineered laser technology the frames are cut out from raw steel sheets imported from Sweden.
         Then, they pass through the various stages of hand-manufacturing.
         With great precision and attention to detail the frames are hand-polished, painted, decorated and assembled by a crew of 250 dedicated eyewear production experts.
         At each phase, they are inspected with care for highest quality assurance.
-        <br>
+      </p>
+      <p>
         The end product is a flawless piece of art, sophisticated, comfortable, durable and flexible.
       </p>
-      <h5 class="mt-3"><strong>CAROLINE ABRAM PARIS</strong></h5>
+      <h5 class="mt-3" id="carolineAbramParis"><strong>CAROLINE ABRAM PARIS</strong></h5>
       <p>
         Optician, trained during several years in designer oriented stores, Caroline Abram started in 1998 designing jewels and accessories for the eyewear market:
         Lorgnettes, magnifying glasses, chains etc... It is reviving the not well known object called the lorgnette, that she quickly met an international success.
       </p>
-      <p class="font-weight-bold font-italic">
+      <p class="font-weight-bold font-italic text-center">
         “CAROLINE ABRAM'S COLLECTIONS ARE INTENDED FOR ALL THE WOMEN WHO WANTED TO FEEL BEAUTIFUL, SENSUAL, OR JUST THEMSELVES.”
       </p>
       <p>
         Rewarded by two gold Silmo awards, the Filao company opened its workshops of craft manufacturing in Dakar where Caroline spent her childhood.
         She trained a women's team there, which have been manufacturing for 15 years, all her accessory lines.
         Caroline Abram uses diverse materials such as resin, the silver, wood, semiprecious stone...
-        <br>
+      </p>
+      <p>
         During her journeys she discovers the charms of Florida and in 2008, she launched her own line of glasses reminding her of the old-fashioned charm of Miami.
         Sixties and vintage, South Beach inspired Caroline: the cat-eyes, colors, extreme femininity.
       </p>
-      <p class="font-weight-bold font-italic">
+      <p class="font-weight-bold font-italic text-center">
         “CAROLINE CREATES THE ADDICTION, THE DESIRE TO POSSESS THEM IN ALL THE COLORS, TO COORDINATE THEM WITH THEIR BAGS AND SHOES.”
       </p>
       <p>
@@ -142,7 +155,7 @@
     <h1 class="title-text">Testimonials</h1>
   </div -->
   <div class="mt-4" id="faqs">
-    <h1 class="title-text">FAQs</h1>
+    <h1 class="title-text text-center">FAQs</h1>
     <h5 class="mt-3"><strong>EYEGLASS PRESCRIPTION</strong></h5>
     <p>
       A valid prescription signed by a licensed eyecare provider and is not expired.
@@ -160,8 +173,7 @@
         Is my payment secure?
       </dt>
       <dd>
-        Protecting your sensitive data is important to FBT, and to insure a secure checkout process, our site features an SSL certificate.
-        Our SSL connection protects your sensitive data, such as credit card information, exchanged during our secure checkout process.
+        YES
       </dd>
       <dt>
         Do you accept insurance?
@@ -191,16 +203,19 @@
         How long does it take to process my order?
       </dt>
       <dd>
-        Orders are processed Monday through Friday, excluding US holidays.
-        Orders placed on weekends or holidays, will be processed the following business day.
-        Order processing time varies depending on the type of lenses ordered, the availability of product and our inspection process.
-        <br>
-        Please use this as a general guide for processing times:
-        <ul>
-          <li>Frame with Single Vision or custom Sunglass Lenses: 3 – 5 business days</li>
-          <li>Frame with Progressive Lenses: 7 – 10 business days</li>
-        </ul>
-        ** Customized and prescription lenses are non-refundable. **
+        <p>
+          Orders are processed Monday through Friday, excluding US holidays.
+          Orders placed on weekends or holidays, will be processed the following business day.
+          Order processing time varies depending on the type of lenses ordered, the availability of product and our inspection process.
+        </p>
+        <p>
+          Please use this as a general guide for processing times:
+          <ul>
+            <li>Frame with Single Vision or custom Sunglass Lenses: 3 – 5 business days</li>
+            <li>Frame with Progressive Lenses: 7 – 10 business days</li>
+          </ul>
+          ** Customized and prescription lenses are non-refundable. **
+        </p>
       </dd>
       <dt>
         What if I can’t adapt to my new progressive lenses?
@@ -213,10 +228,13 @@
         How do I clean my glasses?
       </dt>
       <dd>
-        For a quick clean, blow loose particles off your frames first, and then clean with the microfiber cloth provided with your glasses.
-        <br>
-        For a deep clean, add a drop of liquid dish soap (moisturizer-free) to a bowl of water big enough to submerge your frames.
-        Soak for a few minutes, then wipe clean with a premium soft cloth (cheap paper towels or tissue paper can contain wood fibers that may scratch your lenses).
+        <p>
+          For a quick clean, blow loose particles off your frames first, and then clean with the microfiber cloth provided with your glasses.
+        </p>
+        <p>
+          For a deep clean, add a drop of liquid dish soap (moisturizer-free) to a bowl of water big enough to submerge your frames.
+          Soak for a few minutes, then wipe clean with a premium soft cloth (cheap paper towels or tissue paper can contain wood fibers that may scratch your lenses).
+        </p>
       </dd>
     </dl>
   </div>
