misc text changes; added OVVO images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a class="nav-item nav-link" href="#ovvoOptics" onclick="$('#navbar').collapse('hide')">OVVO Optics</a></li>
             <li><a class="nav-item nav-link" href="#carolineAbramParis" onclick="$('#navbar').collapse('hide')">Caroline Abram Paris</a></li>
           </ul>
-          <!-- a class="nav-item nav-link" href="#testimonials" onclick="$('#navbar').collapse('hide')">Testimonials</a -->
+          <a class="nav-item nav-link" href="#services" onclick="$('#navbar').collapse('hide')">Our Services</a>
           <a class="nav-item nav-link" href="#faqs" onclick="$('#navbar').collapse('hide')">FAQs</a>
         </div>
       </div>
@@ -56,20 +56,19 @@
     <div class="mt-4" id="mission">
       <h1 class="title-text text-center">Mission</h1>
       <p>
-        In redefining your eyewear selection expierence, it is everything to us in how you see the world and how you feel wearing a style that best expresses your individuality.
-        With our independent and diverse collection we style and fit you professionally. Our collections are hand picked with quality, design and fashion in mind for our clients.
-        Branding and advertising for manufacturers is not our course.
+        In redefining your eyewear selection experience, it is everything to us in how you see the world and how you feel wearing a style that best expresses your individuality.
+        With our independent and diverse collection we style and fit you professionally.
+        Because your time is so precious we in this fast pace world, we bring the eyewear boutique to you.
+        Our collections are hand picked with quality, design and fashion in mind for our clients. Branding and advertising for manufacturers is not our course.
       </p>
       <p>
-        Our lens design portfolio and relationship with our lab are truly something we are proud of. There is nothing that can not be done within reason.
-        From unique fashion tints, mirror coating, anti-reflective coating with mininum to no color hue to remarkably thin lens options in high power ranges.
-        We take pride in our craft to be able to create a lens unique to your style and needs.
+        Our lens design portfolio and relationship with our lab are truly something we are proud of and as a team we take pride in our craft.
       </p>
     </div>
     <div class="mt-4" id="whoWeAre">
       <h1 class="title-text text-center">Who We Are</h1>
       <p>
-        With a keen eye for eyewear fashion and over 24 years of optical expierience, I am excited to have founded Framed by tone, LLC - “your redefined eyewear concierge”.
+        With a keen eye for eyewear fashion and over 24 years of optical experience, I am excited to have founded Framed by tone, LLC - “your redefined eyewear concierge”.
         Coupled with my approach to designing and curating exclusive collections, I take joy and pride when clients feel drawn with confidence that they will receive world class service and I excel in meeting their needs.
         Finding that perfect piece of ART to compliment their unique personality, keeping them fashionably ahead of the curve, and see them glow with confidence and pride.
         This is my passion and my craft. In my free time I enjoy biking and hiking with my better half when at all possible.
@@ -90,7 +89,7 @@
         Every pair of glasses is thoughtfully fabricated with an experienced optician. With prior adjustments to the frame and numerous measurements to ensure accuracy,
         we interpret both functional and aesthetic variables to produce the finest quality eyewear for you.
       </p>
-      <h5 class="mt-3" id="zenBarcelona"><strong>ZEN BARCELONA</strong></h5>
+      <h5 class="mt-3 float-none" id="zenBarcelona"><strong>ZEN BARCELONA</strong></h5>
       <em>“frames that define you”</em>
       <p>
         The brand was born in 2005 in Barcelona and the city is in its DNA. Full of contrasts in perfect balance, home to historic buildings and avant-garde architecture,
@@ -101,14 +100,16 @@
         its process takes typically about six months and results in a one-of-a-kind frame that reflects our way of understanding eyewear and what our clients want:
         special and unique designs true to who they are as unique individuals.
       </p>
-      <h5 class="mt-3" id="ovvoOptics"><strong>OVVO Optics</strong></h5>
+      <h5 class="mt-3 float-none" id="ovvoOptics"><strong>OVVO Optics</strong></h5>
       <p>
+        <img src="ovvo-shadow.jpg" class="img-inline float-left mr-2">
         OVVO has been present in the U.S. since March 2011. Its history, however, goes back to Europe of the Cold War era. That’s when a group of scientists,
         who were working on developing a material for spacecraft and military use, fused surgical steel and titanium, achieving an exceptionally light,
         durable and flexible material that is also hypoallergenic. Inspired by its remarkable qualities,
         in 1980 the engineers of the company started using this unique composite to make frames for glasses.
         They are handmade, but manufactured with outstanding precision, mastered by over 30 years of experience. Entirely produced in Germany and Poland,
         OVVO frames bring exquisite European style and unmatched quality.
+        <img src="ovvo-fall-gent.jpg" class="img-inline float-right ml-2">
       </p>
       <p>
         Weighing barely 0.6 ounces OVVO frames offer unparalleled comfort and unfailing durability.
@@ -126,7 +127,7 @@
       <p>
         The end product is a flawless piece of art, sophisticated, comfortable, durable and flexible.
       </p>
-      <h5 class="mt-3" id="carolineAbramParis"><strong>CAROLINE ABRAM PARIS</strong></h5>
+      <h5 class="mt-3 float-none" id="carolineAbramParis"><strong>CAROLINE ABRAM PARIS</strong></h5>
       <p>
         Optician, trained during several years in designer oriented stores, Caroline Abram started in 1998 designing jewels and accessories for the eyewear market:
         Lorgnettes, magnifying glasses, chains etc... It is reviving the not well known object called the lorgnette, that she quickly met an international success.
@@ -151,96 +152,107 @@
         The line was rewarded its first year for the Silmo award for best kids design.
       </p>
     </div>
-    <!-- div class="mt-4" id="testimonials">
-    <h1 class="title-text">Testimonials</h1>
-  </div -->
-  <div class="mt-4" id="faqs">
-    <h1 class="title-text text-center">FAQs</h1>
-    <h5 class="mt-3"><strong>EYEGLASS PRESCRIPTION</strong></h5>
-    <p>
-      A valid prescription signed by a licensed eyecare provider and is not expired.
-      Depending on local and state laws, your prescription may be considered valid between 1-2 years from the date of examination.
-    </p>
-    <h5 class="mt-3"><strong>PAYMENT</strong></h5>
-    <dl>
-      <dt>
-        What forms of payment do you accept?
-      </dt>
-      <dd>
-        We accept Visa, MasterCard, Discover and American Express.
-      </dd>
-      <dt>
-        Is my payment secure?
-      </dt>
-      <dd>
-        YES
-      </dd>
-      <dt>
-        Do you accept insurance?
-      </dt>
-      <dd>
-        FBT is an Out-of-Network VSP provider and Eyemed.
-        As an Out-of-Network provider we extend 25-35% (depending on the lens type) off our retail pricing for a complete pair of prescription eyeglasses purchased.
-        We also will provide you with simple instructions on how to collect your additional Out-of-Network reimbursement directly from VSP/Eyemed.
-        We would be happy to help fill out and have ready for you to submit when possible.
-      </dd>
-      <dt>
-        Do you accept FSA and HSA?
-      </dt>
-      <dd>
-        You may use your FSA (Flexible Spending Account) or HSA (Health Savings Account) cards to make online purchases towards prescription glasses.
-      </dd>
-      <dt>
-        Is sales tax added to my order?
-      </dt>
-      <dd>
-        Missouri state residents are subject to local sales tax.
-      </dd>
-    </dl>
-    <h5 class="mt-3"><strong>PROCESS/SHIPPING</strong></h5>
-    <dl>
-      <dt>
-        How long does it take to process my order?
-      </dt>
-      <dd>
-        <p>
-          Orders are processed Monday through Friday, excluding US holidays.
-          Orders placed on weekends or holidays, will be processed the following business day.
-          Order processing time varies depending on the type of lenses ordered, the availability of product and our inspection process.
-        </p>
-        <p>
-          Please use this as a general guide for processing times:
-          <ul>
-            <li>Frame with Single Vision or custom Sunglass Lenses: 3 – 5 business days</li>
-            <li>Frame with Progressive Lenses: 7 – 10 business days</li>
-          </ul>
-          ** Customized and prescription lenses are non-refundable. **
-        </p>
-      </dd>
-      <dt>
-        What if I can’t adapt to my new progressive lenses?
-      </dt>
-      <dd>
-        If you are unable to comfortably adapt to your new progressive lenses within 60 days of delivery, I will gladly provide you with Single Vision or Lined Bifocal lenses at no additional charge.
-        Please note: you will not be reimbursed for the difference in price between the progressive lenses and these replacement lenses.
-      </dd>
-      <dt>
-        How do I clean my glasses?
-      </dt>
-      <dd>
-        <p>
-          For a quick clean, blow loose particles off your frames first, and then clean with the microfiber cloth provided with your glasses.
-        </p>
-        <p>
-          For a deep clean, add a drop of liquid dish soap (moisturizer-free) to a bowl of water big enough to submerge your frames.
-          Soak for a few minutes, then wipe clean with a premium soft cloth (cheap paper towels or tissue paper can contain wood fibers that may scratch your lenses).
-        </p>
-      </dd>
-    </dl>
+    <div class="mt-4" id="services">
+      <h1 class="title-text text-center">Our Services</h1>
+      <ul>
+        <li>We come to you with our awesome frame selection in hand to your home, office or coffee shop by appointment.</li>
+        <li>After completion of your eyewear and our personal inspection we deliver them to you. (All tools for adjustments in hand)</li>
+        <li>Most all lens designs come included with hydrophobic / oleophobic / anti-static / scratch coating / UV400 coating. Two year warranty on normal wear and tear.</li>
+        <li>As an option we do offer anti-reflective lens coating with minimum to no color hue for an additional fee.</li>
+        <li>
+          We offer house lens / frame packages including impact resistant material / basic anti-reflective / scratch coating and UV for $149 (single vision), or $349 (no-line).
+          One year warranty on normal wear and tear.
+        </li>
+      </ul>
+    </div>
+    <div class="mt-4" id="faqs">
+      <h1 class="title-text text-center">FAQs</h1>
+      <h5 class="mt-3"><strong>EYEGLASS &amp; CONTACT LENS PRESCRIPTION</strong></h5>
+      <p>
+        A valid prescription signed by a licensed eyecare provider and is not expired.
+        Depending on local and state laws, your prescription may be considered valid between 1-2 years from the date of examination.
+      </p>
+      <h5 class="mt-3"><strong>PAYMENT</strong></h5>
+      <dl>
+        <dt>
+          What forms of payment do you accept?
+        </dt>
+        <dd>
+          We accept Visa, MasterCard, Discover and American Express.
+        </dd>
+        <dt>
+          Is my payment secure?
+        </dt>
+        <dd>
+          YES
+        </dd>
+        <dt>
+          Do you accept insurance?
+        </dt>
+        <dd>
+          FBT is an Out-of-Network VSP provider and Eyemed.
+          As an Out-of-Network provider we extend 25-35% (depending on the lens type) off our retail pricing for a complete pair of prescription eyeglasses purchased.
+          We also will provide you with simple instructions on how to collect your additional Out-of-Network reimbursement directly from VSP/Eyemed.
+          We would be happy to help fill out and have ready for you to submit when possible.
+        </dd>
+        <dt>
+          Do you accept FSA and HSA?
+        </dt>
+        <dd>
+          You may use your FSA (Flexible Spending Account) or HSA (Health Savings Account) cards to make online purchases towards prescription glasses.
+        </dd>
+        <dt>
+          Is sales tax added to my order?
+        </dt>
+        <dd>
+          Missouri state residents are subject to local sales tax.
+        </dd>
+      </dl>
+      <h5 class="mt-3"><strong>PROCESS/SHIPPING</strong></h5>
+      <dl>
+        <dt>
+          How long does it take to process my order?
+        </dt>
+        <dd>
+          <p>
+            Orders are processed Monday through Friday, excluding US holidays.
+            Orders placed on weekends or holidays, will be processed the following business day.
+            Order processing time varies depending on the type of lenses ordered, the availability of product and our inspection process.
+            <strong>*We abide by ANSI spectacle Lens Guidelines*</strong>
+          </p>
+          <p>
+            Please use this as a general guide for processing times:
+            <ul>
+              <li>Frame with Single Vision or custom Sunglass Lenses: 3 – 5 business days</li>
+              <li>Frame with Progressive Lenses: 7 – 10 business days</li>
+            </ul>
+            ** Customized and prescription lenses are non-refundable. **
+          </p>
+        </dd>
+        <dt>
+          What if I can’t adapt to my new progressive lenses?
+        </dt>
+        <dd>
+          If you are unable to comfortably adapt to your new progressive lenses within 60 days of delivery, I will gladly provide you with Single Vision or Lined Bifocal lenses at no additional charge.
+          Please note: you will not be reimbursed for the difference in price between the progressive lenses and these replacement lenses.
+        </dd>
+        <dt>
+          How do I clean my glasses?
+        </dt>
+        <dd>
+          <p>
+            For a quick clean, blow loose particles off your frames first, and then clean with the microfiber cloth provided with your glasses.
+          </p>
+          <p>
+            For a deep clean, add a drop of liquid dish soap (moisturizer-free) to a bowl of water big enough to submerge your frames.
+            Soak for a few minutes, then wipe clean with a premium soft cloth (cheap paper towels or tissue paper can contain wood fibers that may scratch your lenses).
+          </p>
+        </dd>
+      </dl>
+    </div>
   </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 </html>
