added to services list

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
           We offer house lens / frame packages including impact resistant material / basic anti-reflective / scratch coating and UV for $149 (single vision), or $349 (no-line).
           One year warranty on normal wear and tear.
         </li>
+        <li>We also provide custom products &amp; services such as sun clips, modified lens shapes, and rhinestone setting and replacement.</li>
       </ul>
     </div>
     <div class="mt-4" id="faqs">
