added more frame-story images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>framed by tone</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Berkshire Swash'>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Buda'>
@@ -89,68 +90,77 @@
         Every pair of glasses is thoughtfully fabricated with an experienced optician. With prior adjustments to the frame and numerous measurements to ensure accuracy,
         we interpret both functional and aesthetic variables to produce the finest quality eyewear for you.
       </p>
-      <h5 class="mt-3 float-none" id="zenBarcelona"><strong>ZEN BARCELONA</strong></h5>
+      <h5 class="mt-3" id="zenBarcelona"><strong>ZEN BARCELONA</strong></h5>
       <em>“frames that define you”</em>
-      <p>
-        The brand was born in 2005 in Barcelona and the city is in its DNA. Full of contrasts in perfect balance, home to historic buildings and avant-garde architecture,
-        Barcelona has inspired every one of our shapes and innovative colours.
-      </p>
-      <p>
-        With all Zen designs designed and created entirely in Barcelona by our team of designers,
-        its process takes typically about six months and results in a one-of-a-kind frame that reflects our way of understanding eyewear and what our clients want:
-        special and unique designs true to who they are as unique individuals.
-      </p>
-      <h5 class="mt-3 float-none" id="ovvoOptics"><strong>OVVO Optics</strong></h5>
-      <p>
-        <img src="ovvo-shadow.jpg" class="img-inline float-left mr-2">
-        OVVO has been present in the U.S. since March 2011. Its history, however, goes back to Europe of the Cold War era. That’s when a group of scientists,
-        who were working on developing a material for spacecraft and military use, fused surgical steel and titanium, achieving an exceptionally light,
-        durable and flexible material that is also hypoallergenic. Inspired by its remarkable qualities,
-        in 1980 the engineers of the company started using this unique composite to make frames for glasses.
-        They are handmade, but manufactured with outstanding precision, mastered by over 30 years of experience. Entirely produced in Germany and Poland,
-        OVVO frames bring exquisite European style and unmatched quality.
-        <img src="ovvo-fall-gent.jpg" class="img-inline float-right ml-2">
-      </p>
-      <p>
-        Weighing barely 0.6 ounces OVVO frames offer unparalleled comfort and unfailing durability.
-        Tests showed that stretched flat frames can hold up to 90 pounds without breaking or wrecking.
-        Virtually indestructible and highly flexible is also OVVO Optics-patented screw-free hinge that can withstand more than 300,000 rotations
-        (an equivalent of 205 years of usage) and reveal no changes in structure or appearance.
-      </p>
-      <p>
-        OVVO Optics’ eyewear is 100% manufactured in family-owned plants in Europe, where each frame goes through 65-85 steps before it is complete.
-        First, using German engineered laser technology the frames are cut out from raw steel sheets imported from Sweden.
-        Then, they pass through the various stages of hand-manufacturing.
-        With great precision and attention to detail the frames are hand-polished, painted, decorated and assembled by a crew of 250 dedicated eyewear production experts.
-        At each phase, they are inspected with care for highest quality assurance.
-      </p>
-      <p>
-        The end product is a flawless piece of art, sophisticated, comfortable, durable and flexible.
-      </p>
-      <h5 class="mt-3 float-none" id="carolineAbramParis"><strong>CAROLINE ABRAM PARIS</strong></h5>
-      <p>
-        Optician, trained during several years in designer oriented stores, Caroline Abram started in 1998 designing jewels and accessories for the eyewear market:
-        Lorgnettes, magnifying glasses, chains etc... It is reviving the not well known object called the lorgnette, that she quickly met an international success.
-      </p>
-      <p class="font-weight-bold font-italic text-center">
-        “CAROLINE ABRAM'S COLLECTIONS ARE INTENDED FOR ALL THE WOMEN WHO WANTED TO FEEL BEAUTIFUL, SENSUAL, OR JUST THEMSELVES.”
-      </p>
-      <p>
-        Rewarded by two gold Silmo awards, the Filao company opened its workshops of craft manufacturing in Dakar where Caroline spent her childhood.
-        She trained a women's team there, which have been manufacturing for 15 years, all her accessory lines.
-        Caroline Abram uses diverse materials such as resin, the silver, wood, semiprecious stone...
-      </p>
-      <p>
-        During her journeys she discovers the charms of Florida and in 2008, she launched her own line of glasses reminding her of the old-fashioned charm of Miami.
-        Sixties and vintage, South Beach inspired Caroline: the cat-eyes, colors, extreme femininity.
-      </p>
-      <p class="font-weight-bold font-italic text-center">
-        “CAROLINE CREATES THE ADDICTION, THE DESIRE TO POSSESS THEM IN ALL THE COLORS, TO COORDINATE THEM WITH THEIR BAGS AND SHOES.”
-      </p>
-      <p>
-        After being asked so often be her customers “Do you make the same for children?”, it became obvious when the moment had come, in 2014 to (launch) the «Tête à Lunettes».
-        The line was rewarded its first year for the Silmo award for best kids design.
-      </p>
+      <div class="clearfix">
+        <p>
+          <img src="zen-blue-red.jpg" class="img-inline float-right ml-2">
+          The brand was born in 2005 in Barcelona and the city is in its DNA. Full of contrasts in perfect balance, home to historic buildings and avant-garde architecture,
+          Barcelona has inspired every one of our shapes and innovative colours.
+        </p>
+        <p>
+          With all Zen designs designed and created entirely in Barcelona by our team of designers,
+          its process takes typically about six months and results in a one-of-a-kind frame that reflects our way of understanding eyewear and what our clients want:
+          special and unique designs true to who they are as unique individuals.
+        </p>
+      </div>
+      <h5 class="mt-3" id="ovvoOptics"><strong>OVVO Optics</strong></h5>
+      <div class="clearfix">
+        <p>
+          <img src="ovvo-shadow.jpg" class="img-inline float-left mr-2">
+          OVVO has been present in the U.S. since March 2011. Its history, however, goes back to Europe of the Cold War era. That’s when a group of scientists,
+          who were working on developing a material for spacecraft and military use, fused surgical steel and titanium, achieving an exceptionally light,
+          durable and flexible material that is also hypoallergenic. Inspired by its remarkable qualities,
+          in 1980 the engineers of the company started using this unique composite to make frames for glasses.
+          They are handmade, but manufactured with outstanding precision, mastered by over 30 years of experience. Entirely produced in Germany and Poland,
+          OVVO frames bring exquisite European style and unmatched quality.
+          <img src="ovvo-fall-gent.jpg" class="img-inline float-right ml-2">
+        </p>
+        <p>
+          Weighing barely 0.6 ounces OVVO frames offer unparalleled comfort and unfailing durability.
+          Tests showed that stretched flat frames can hold up to 90 pounds without breaking or wrecking.
+          Virtually indestructible and highly flexible is also OVVO Optics-patented screw-free hinge that can withstand more than 300,000 rotations
+          (an equivalent of 205 years of usage) and reveal no changes in structure or appearance.
+        </p>
+        <p>
+          OVVO Optics’ eyewear is 100% manufactured in family-owned plants in Europe, where each frame goes through 65-85 steps before it is complete.
+          First, using German engineered laser technology the frames are cut out from raw steel sheets imported from Sweden.
+          Then, they pass through the various stages of hand-manufacturing.
+          With great precision and attention to detail the frames are hand-polished, painted, decorated and assembled by a crew of 250 dedicated eyewear production experts.
+          At each phase, they are inspected with care for highest quality assurance.
+        </p>
+        <p>
+          The end product is a flawless piece of art, sophisticated, comfortable, durable and flexible.
+        </p>
+      </div>
+      <h5 class="mt-3" id="carolineAbramParis"><strong>CAROLINE ABRAM PARIS</strong></h5>
+      <div class="clearfix">
+        <p>
+          <img src="caroline-marble.jpg" class="img-inline float-left mr-2">
+          Optician, trained during several years in designer oriented stores, Caroline Abram started in 1998 designing jewels and accessories for the eyewear market:
+          Lorgnettes, magnifying glasses, chains etc... It is reviving the not well known object called the lorgnette, that she quickly met an international success.
+        </p>
+        <p class="font-weight-bold font-italic text-center">
+          “CAROLINE ABRAM'S COLLECTIONS ARE INTENDED FOR ALL THE WOMEN WHO WANTED TO FEEL BEAUTIFUL, SENSUAL, OR JUST THEMSELVES.”
+        </p>
+        <p>
+          Rewarded by two gold Silmo awards, the Filao company opened its workshops of craft manufacturing in Dakar where Caroline spent her childhood.
+          She trained a women's team there, which have been manufacturing for 15 years, all her accessory lines.
+          Caroline Abram uses diverse materials such as resin, the silver, wood, semiprecious stone...
+          <img src="caroline-orange-bag.jpg" class="img-inline float-right ml-2">
+        </p>
+        <p>
+          During her journeys she discovers the charms of Florida and in 2008, she launched her own line of glasses reminding her of the old-fashioned charm of Miami.
+          Sixties and vintage, South Beach inspired Caroline: the cat-eyes, colors, extreme femininity.
+        </p>
+        <p class="font-weight-bold font-italic text-center">
+          “CAROLINE CREATES THE ADDICTION, THE DESIRE TO POSSESS THEM IN ALL THE COLORS, TO COORDINATE THEM WITH THEIR BAGS AND SHOES.”
+        </p>
+        <p>
+          After being asked so often be her customers “Do you make the same for children?”, it became obvious when the moment had come, in 2014 to (launch) the «Tête à Lunettes».
+          The line was rewarded its first year for the Silmo award for best kids design.
+        </p>
+      </div>
     </div>
     <div class="mt-4" id="services">
       <h1 class="title-text text-center">Our Services</h1>
@@ -180,12 +190,6 @@
         </dt>
         <dd>
           We accept Visa, MasterCard, Discover and American Express.
-        </dd>
-        <dt>
-          Is my payment secure?
-        </dt>
-        <dd>
-          YES
         </dd>
         <dt>
           Do you accept insurance?
