--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p>
         In redefining your eyewear selection experience, it is everything to us in how you see the world and how you feel wearing a style that best expresses your individuality.
         With our independent and diverse collection we style and fit you professionally.
-        Because your time is so precious we in this fast pace world, we bring the eyewear boutique to you.
+        Because your time is so precious in this fast pace world, we bring the eyewear boutique to you.
         Our collections are hand picked with quality, design and fashion in mind for our clients. Branding and advertising for manufacturers is not our course.
       </p>
       <p>
@@ -68,19 +68,22 @@
     </div>
     <div class="mt-4" id="whoWeAre">
       <h1 class="title-text text-center">Who We Are</h1>
-      <p>
-        With a keen eye for eyewear fashion and over 24 years of optical experience, I am excited to have founded Framed by tone, LLC - “your redefined eyewear concierge”.
-        Coupled with my approach to designing and curating exclusive collections, I take joy and pride when clients feel drawn with confidence that they will receive world class service and I excel in meeting their needs.
-        Finding that perfect piece of ART to compliment their unique personality, keeping them fashionably ahead of the curve, and see them glow with confidence and pride.
-        This is my passion and my craft. In my free time I enjoy biking and hiking with my better half when at all possible.
-        We always look forward to enjoying our city with its hidden wonders and visiting vineyards when at all possible.
-      </p>
+      <div class="clearfix">
+        <p>
+          <img src="tone.jpg" class="img-inline float-right ml-2">
+          With a keen eye for eyewear fashion and over 24 years of optical experience, I am excited to have founded Framed by Tone, LLC - “your redefined eyewear concierge”.
+          Coupled with my approach to designing and curating exclusive collections, I take joy and pride when clients feel drawn with confidence that they will receive world class service and I excel in meeting their needs.
+          Finding that perfect piece of ART to compliment their unique personality, keeping them fashionably ahead of the curve, and see them glow with confidence and pride.
+          This is my passion and my craft. In my free time I enjoy biking and hiking with my better half when at all possible.
+          We always look forward to enjoying our city with its hidden wonders and visiting vineyards when at all possible.
+        </p>
+      </div>
     </div>
     <div class="mt-4" id="frames">
       <h1 class="title-text text-center">Our Frames and Their Stories</h1>
       <p>
         With most eyeglasses being made and distributed by just a few giant companies, their monopoly is rapidly eliminating the general public's choices.
-        Framed by Tone is taking a stand. As you select the perfect pair from us know that you are supporting small independent shops.
+        Framed by Tone is taking a stand. As you select the perfect pair of frames from us, know that you are supporting small independent shops.
       </p>
       <p>
         Stocking over 300 hand selected frames in Phase I of our shop, we have been supported with open arms by vendors from around the world.
@@ -117,7 +120,7 @@
           <img src="ovvo-fall-gent.jpg" class="img-inline float-right ml-2">
         </p>
         <p>
-          Weighing barely 0.6 ounces OVVO frames offer unparalleled comfort and unfailing durability.
+          Weighing barely 0.6 ounces, OVVO frames offer unparalleled comfort and unfailing durability.
           Tests showed that stretched flat frames can hold up to 90 pounds without breaking or wrecking.
           Virtually indestructible and highly flexible is also OVVO Optics-patented screw-free hinge that can withstand more than 300,000 rotations
           (an equivalent of 205 years of usage) and reveal no changes in structure or appearance.
@@ -157,7 +160,7 @@
           “CAROLINE CREATES THE ADDICTION, THE DESIRE TO POSSESS THEM IN ALL THE COLORS, TO COORDINATE THEM WITH THEIR BAGS AND SHOES.”
         </p>
         <p>
-          After being asked so often be her customers “Do you make the same for children?”, it became obvious when the moment had come, in 2014 to (launch) the «Tête à Lunettes».
+          After being asked so often by her customers “Do you make the same for children?”, it became obvious when the moment had come, in 2014 to launch the «Tête à Lunettes».
           The line was rewarded its first year for the Silmo award for best kids design.
         </p>
       </div>
@@ -165,15 +168,21 @@
     <div class="mt-4" id="services">
       <h1 class="title-text text-center">Our Services</h1>
       <ul>
-        <li>We come to you with our awesome frame selection in hand to your home, office or coffee shop by appointment.</li>
-        <li>After completion of your eyewear and our personal inspection we deliver them to you. (All tools for adjustments in hand)</li>
-        <li>Most all lens designs come included with hydrophobic / oleophobic / anti-static / scratch coating / UV400 coating. Two year warranty on normal wear and tear.</li>
-        <li>As an option we do offer anti-reflective lens coating with minimum to no color hue for an additional fee.</li>
+        <li>
+          We come to you with our awesome frame selection in hand to your home, office or coffee shop by appointment.
+          After completion of your eyewear and our personal inspection, we deliver them to you (all tools for adjustments in hand).
+        </li>
+        <li>Most all lens designs come included with hydrophobic / oleophobic / anti-static / anti-scratch / UV400 coating. Two year warranty on normal wear and tear.</li>
+        <li>As an option we do offer anti-reflective lens coating with minimum- to no-color hue for an additional fee.</li>
         <li>
           We offer house lens / frame packages including impact resistant material / basic anti-reflective / scratch coating and UV for $149 (single vision), or $349 (no-line).
           One year warranty on normal wear and tear.
         </li>
-        <li>We also provide custom products &amp; services such as sun clips, modified lens shapes, and rhinestone setting and replacement.</li>
+        <li>
+          We are able to provide our clients with contact lens supplies at a competative cost.
+          Please ask us regarding direct shipping options.
+        </li>
+        <li>We also provide custom products &amp; services such as sun clips, modified lens shapes, and rhinestone setting &amp; replacement.</li>
       </ul>
     </div>
     <div class="mt-4" id="faqs">
@@ -195,16 +204,15 @@
           Do you accept insurance?
         </dt>
         <dd>
-          FBT is an Out-of-Network VSP provider and Eyemed.
-          As an Out-of-Network provider we extend 25-35% (depending on the lens type) off our retail pricing for a complete pair of prescription eyeglasses purchased.
-          We also will provide you with simple instructions on how to collect your additional Out-of-Network reimbursement directly from VSP/Eyemed.
-          We would be happy to help fill out and have ready for you to submit when possible.
+          Framed by Tone is an Out-of-Network provider for all vision insurance providers.
+          However, with proof of insurance, we extend a complimentary 25%-35% discount (depending on the lens type) off our retail pricing for a complete pair of prescription eyeglasses.
+          We also can provide you with simple instructions and/or help you to fill out all necessary information for collecting any additional out-of-network reimbursement amount directly from your provider.
         </dd>
         <dt>
           Do you accept FSA and HSA?
         </dt>
         <dd>
-          You may use your FSA (Flexible Spending Account) or HSA (Health Savings Account) cards to make online purchases towards prescription glasses.
+          Yes, you may use your FSA (Flexible Spending Account) or HSA (Health Savings Account) cards to make purchases towards prescription glasses.
         </dd>
         <dt>
           Is sales tax added to my order?
@@ -213,7 +221,7 @@
           Missouri state residents are subject to local sales tax.
         </dd>
       </dl>
-      <h5 class="mt-3"><strong>PROCESS/SHIPPING</strong></h5>
+      <h5 class="mt-3"><strong>PROCESSING/SHIPPING</strong></h5>
       <dl>
         <dt>
           How long does it take to process my order?
@@ -221,7 +229,7 @@
         <dd>
           <p>
             Orders are processed Monday through Friday, excluding US holidays.
-            Orders placed on weekends or holidays, will be processed the following business day.
+            Orders placed on weekends or holidays will be processed the following business day.
             Order processing time varies depending on the type of lenses ordered, the availability of product and our inspection process.
             <strong>*We abide by ANSI spectacle Lens Guidelines*</strong>
           </p>
@@ -234,27 +242,9 @@
             ** Customized and prescription lenses are non-refundable. **
           </p>
         </dd>
-        <dt>
-          What if I can’t adapt to my new progressive lenses?
-        </dt>
-        <dd>
-          If you are unable to comfortably adapt to your new progressive lenses within 60 days of delivery, I will gladly provide you with Single Vision or Lined Bifocal lenses at no additional charge.
-          Please note: you will not be reimbursed for the difference in price between the progressive lenses and these replacement lenses.
-        </dd>
-        <dt>
-          How do I clean my glasses?
-        </dt>
-        <dd>
-          <p>
-            For a quick clean, blow loose particles off your frames first, and then clean with the microfiber cloth provided with your glasses.
-          </p>
-          <p>
-            For a deep clean, add a drop of liquid dish soap (moisturizer-free) to a bowl of water big enough to submerge your frames.
-            Soak for a few minutes, then wipe clean with a premium soft cloth (cheap paper towels or tissue paper can contain wood fibers that may scratch your lenses).
-          </p>
-        </dd>
       </dl>
     </div>
+    <p class="text-center"><small>&copy; Framed by Tone, LLC. All rights reserved.</small></p>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
