fix text & image formatting for small displays; better image of Tone

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <div class="mt-4" id="whoWeAre">
       <h1 class="title-text text-center">Who We Are</h1>
       <div class="clearfix">
+        <img src="tone.jpg" class="img-inline float-sm-right ml-sm-2 mx-auto d-block">
         <p>
-          <img src="tone.jpg" class="img-inline float-right ml-2">
           With a keen eye for eyewear fashion and over 24 years of optical experience, I am excited to have founded Framed by Tone, LLC - “your redefined eyewear concierge”.
           Coupled with my approach to designing and curating exclusive collections, I take joy and pride when clients feel drawn with confidence that they will receive world class service and I excel in meeting their needs.
           Finding that perfect piece of ART to compliment their unique personality, keeping them fashionably ahead of the curve, and see them glow with confidence and pride.
@@ -96,8 +96,8 @@
       <h5 class="mt-3" id="zenBarcelona"><strong>ZEN BARCELONA</strong></h5>
       <em>“frames that define you”</em>
       <div class="clearfix">
+        <img src="zen-blue-red.jpg" class="img-inline float-sm-right ml-sm-2 mx-auto d-block">
         <p>
-          <img src="zen-blue-red.jpg" class="img-inline float-right ml-2">
           The brand was born in 2005 in Barcelona and the city is in its DNA. Full of contrasts in perfect balance, home to historic buildings and avant-garde architecture,
           Barcelona has inspired every one of our shapes and innovative colours.
         </p>
@@ -109,16 +109,16 @@
       </div>
       <h5 class="mt-3" id="ovvoOptics"><strong>OVVO Optics</strong></h5>
       <div class="clearfix">
+        <img src="ovvo-shadow.jpg" class="img-inline float-sm-left mr-sm-2 mx-auto d-block">
         <p>
-          <img src="ovvo-shadow.jpg" class="img-inline float-left mr-2">
           OVVO has been present in the U.S. since March 2011. Its history, however, goes back to Europe of the Cold War era. That’s when a group of scientists,
           who were working on developing a material for spacecraft and military use, fused surgical steel and titanium, achieving an exceptionally light,
           durable and flexible material that is also hypoallergenic. Inspired by its remarkable qualities,
           in 1980 the engineers of the company started using this unique composite to make frames for glasses.
           They are handmade, but manufactured with outstanding precision, mastered by over 30 years of experience. Entirely produced in Germany and Poland,
           OVVO frames bring exquisite European style and unmatched quality.
-          <img src="ovvo-fall-gent.jpg" class="img-inline float-right ml-2">
         </p>
+        <img src="ovvo-fall-gent.jpg" class="img-inline float-sm-right ml-sm-2 mx-auto d-block">
         <p>
           Weighing barely 0.6 ounces, OVVO frames offer unparalleled comfort and unfailing durability.
           Tests showed that stretched flat frames can hold up to 90 pounds without breaking or wrecking.
@@ -138,8 +138,8 @@
       </div>
       <h5 class="mt-3" id="carolineAbramParis"><strong>CAROLINE ABRAM PARIS</strong></h5>
       <div class="clearfix">
+        <img src="caroline-marble.jpg" class="img-inline float-sm-left mr-sm-2 mx-auto d-block">
         <p>
-          <img src="caroline-marble.jpg" class="img-inline float-left mr-2">
           Optician, trained during several years in designer oriented stores, Caroline Abram started in 1998 designing jewels and accessories for the eyewear market:
           Lorgnettes, magnifying glasses, chains etc... It is reviving the not well known object called the lorgnette, that she quickly met an international success.
         </p>
@@ -150,8 +150,8 @@
           Rewarded by two gold Silmo awards, the Filao company opened its workshops of craft manufacturing in Dakar where Caroline spent her childhood.
           She trained a women's team there, which have been manufacturing for 15 years, all her accessory lines.
           Caroline Abram uses diverse materials such as resin, the silver, wood, semiprecious stone...
-          <img src="caroline-orange-bag.jpg" class="img-inline float-right ml-2">
         </p>
+        <img src="caroline-orange-bag.jpg" class="img-inline float-sm-right ml-sm-2 mx-auto d-block">
         <p>
           During her journeys she discovers the charms of Florida and in 2008, she launched her own line of glasses reminding her of the old-fashioned charm of Miami.
           Sixties and vintage, South Beach inspired Caroline: the cat-eyes, colors, extreme femininity.
