--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       </div>
     </div>
   </nav>
-  <div class="container rounded mt-5 mb-3 p-2 text-light bg-dark-clear text-justify lead" id="top">
+  <div id="top" class="p-4"></div>
+  <div class="container rounded mb-3 p-2 text-light bg-dark-clear text-justify lead">
     <div class="container-fluid rounded border border-white">
       <h1 class="display-title title-text text-nowrap text-center">framed by tone</h1>
       <h1 class="display-subtitle title-text mt-3 text-nowrap text-center"><em>your redefined eyewear concierge</em></h1>
@@ -70,6 +71,11 @@
       <h1 class="title-text text-center">Who We Are</h1>
       <div class="clearfix">
         <img src="tone.jpg" class="img-inline float-sm-right ml-sm-2 mx-auto d-block">
+        <h5 class="mt-3 text-center">
+          <strong>Tone Galvin-Bottjen</strong>
+          <br>
+          <em>Owner / Stylist Optician</em>
+        </h5>
         <p>
           With a keen eye for eyewear fashion and over 24 years of optical experience, I am excited to have founded Framed by Tone, LLC - “your redefined eyewear concierge”.
           Coupled with my approach to designing and curating exclusive collections, I take joy and pride when clients feel drawn with confidence that they will receive world class service and I excel in meeting their needs.
@@ -93,8 +99,11 @@
         Every pair of glasses is thoughtfully fabricated with an experienced optician. With prior adjustments to the frame and numerous measurements to ensure accuracy,
         we interpret both functional and aesthetic variables to produce the finest quality eyewear for you.
       </p>
-      <h5 class="mt-3" id="zenBarcelona"><strong>ZEN BARCELONA</strong></h5>
-      <em>“frames that define you”</em>
+      <h5 class="mt-3" id="zenBarcelona">
+        <strong>ZEN BARCELONA</strong>
+        <br>
+        <em>“frames that define you”</em>
+      </h5>
       <div class="clearfix">
         <img src="zen-blue-red.jpg" class="img-inline float-sm-right ml-sm-2 mx-auto d-block">
         <p>
