added city to top of page

--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
         </div>
         <div class="col-lg-4 text-center">
           <a href="tel:206-637-9961" class="text-light">206.637.9961</a>
+          <br>
+          <a href="mailto:tone@framedByTone.com" class="text-light">tone@framedByTone.com</a>
         </div>
         <div class="col-lg-4 text-center">
-          <a href="mailto:tone@framedByTone.com" class="text-light">tone@framedByTone.com</a>
+          Framing clients in
+          <br>
+          Kansas City, MO 64151
         </div>
       </div>
     </div>
