updated frame collections' wording

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1 class="display-title title-text text-nowrap text-center">framed by tone</h1>
       <h1 class="display-subtitle title-text mt-3 text-nowrap text-center"><em>your redefined eyewear concierge</em></h1>
       <div class="row my-5 justify-content-center">
-        <div class="col-4 col-sm-3 col-lg-2">
+        <div class="col-4 col-sm-3 col-lg-2 text-center">
           <img src="fleur-de-lis-white.png" class="img-fluid mx-auto d-block">
         </div>
       </div>
@@ -112,11 +112,11 @@
         <img src="zen-blue-red.jpg" class="img-inline float-sm-right ml-sm-2 mx-auto d-block">
         <p>
           The brand was born in 2005 in Barcelona and the city is in its DNA. Full of contrasts in perfect balance, home to historic buildings and avant-garde architecture,
-          Barcelona has inspired every one of our shapes and innovative colours.
+          Barcelona has inspired every one of its shapes and innovative colors.
         </p>
         <p>
-          With all Zen designs designed and created entirely in Barcelona by our team of designers,
-          its process takes typically about six months and results in a one-of-a-kind frame that reflects our way of understanding eyewear and what our clients want:
+          With all Zen designs designed and created entirely in Barcelona by their team of designers,
+          its process takes typically about six months and results in a one-of-a-kind frame that reflects our way of understanding eyewear and what clients want:
           special and unique designs true to who they are as unique individuals.
         </p>
       </div>
@@ -162,12 +162,12 @@
         <p>
           Rewarded by two gold Silmo awards, the Filao company opened its workshops of craft manufacturing in Dakar where Caroline spent her childhood.
           She trained a women's team there, which have been manufacturing for 15 years, all her accessory lines.
-          Caroline Abram uses diverse materials such as resin, the silver, wood, semiprecious stone...
+          Caroline Abram uses diverse materials such as resin, silver, wood and semiprecious stone.
         </p>
         <img src="caroline-orange-bag.jpg" class="img-inline float-sm-right ml-sm-2 mx-auto d-block">
         <p>
           During her journeys she discovers the charms of Florida and in 2008, she launched her own line of glasses reminding her of the old-fashioned charm of Miami.
-          Sixties and vintage, South Beach inspired Caroline: the cat-eyes, colors, extreme femininity.
+          Sixties and vintage, South Beach inspired Caroline: the cat-eyes, colors and extreme femininity.
         </p>
         <p class="font-weight-bold font-italic text-center">
           “CAROLINE CREATES THE ADDICTION, THE DESIRE TO POSSESS THEM IN ALL THE COLORS, TO COORDINATE THEM WITH THEIR BAGS AND SHOES.”
